# deep_accelerometer

./: .gitignore  10_baseline_classification.ipynb  10_baseline_classification_William.ipynb  10_explaining_input_data.ipynb  11_baseline_classification.ipynb  11_baseline_classification_Francisco.ipynb  11_machine_learning_classification.ipynb  12_machine_learning_regression.ipynb  12_pca_feature_selection.ipynb  12_reducing_acceleration_data.ipynb  13_baseline_cassification_Ricardo.ipynb  13_subject_selection_explanation.ipynb  14_generate_time_series_matrix.ipynb  1_download.ipynb  2_bug_found_in_read_sas.ipynb  2_convert_to_csv.ipynb  3_create_plots.ipynb  3_testing_EDA_library.ipynb  4_building_target_variable.ipynb  4_testing_EDA_library.ipynb  5_building_target_variable.ipynb  5_physical_activity_feature_engineering.ipynb  6_generate_time_series_matrix.ipynb  6_physical_activity_feature_engineering.ipynb  7_generate_full_dataframe.ipynb  8_data_preprocessing.ipynb  8_generate_full_dataframe.ipynb  9_data_preprocessing.ipynb  9_split_dataset v2.ipynb  9_split_dataset.ipynb  Deep Learning.ipynb  EDA.ipynb  README.md  Trabajo2_IACD.ipynb  download the data.ipynb  ideas.txt  pax.csv  pyproject.toml  target.csv  utils.py
AccNet24/: Create_GAF_images.ipynb  baseline_resnet.ipynb  subject_selection_explanation.ipynb
CNN/: Create_tensors.ipynb
Google Colab/: Classification with CNNs.ipynb  Create_tensors.ipynb  Regression with CNNs.ipynb
utils/: __init__py  get_column.py
