[tool.poetry]
name = "deep-accelerometer"
version = "0.1.0"
description = "A bunch of experiments where we try to correlate physical activity data from accelerometer with bone density"
authors = ["Francisco Horacio, Simao Goncalves <snovaisg.97@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_accelerometer"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pandas = "^2.1.3"
beautifulsoup4 = "^4.12.2"
ipykernel = "^6.26.0"
seaborn = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
